New in version 1.3.1 (xxx 2010)
 * Work around JWNL bug 3006600 for infinite loop -- 
   https://sourceforge.net/tracker/?func=detail&aid=3006600&group_id=33824&atid=409470
 * Add .n-f and .n-m linkgrammar gender tag recognition
 * Fix: anaphora resolution failure due to bad head-word identification.
 * Fix: missing frame concept error.

New in version 1.3.0 (15 May 2010)
 * New date relationships for date tagging.
 * Fix: use of quantity in money expressions.
 * Downcase all flag names, so as to offer a more consistent usage.
 * Major restructuring of the entity maintainer interfaces 
   (this bumps version number)
 * Fix certain morphology handlers e.g.'d->would or 'd->had 
 * Misc frame rules fixes from Jim White, including a crash fix
 * Misc frame rules fixes from Fabricio Silva.
 * Clarify JWNL not found error message problems.

New in version 1.2.1 (3 November 2009)
 * Provide optional Penn-Treebank-compatible POS tagging.
 * Bug fixes for misc mis-identified POS tags
 * Bug fix for mis-identified advmod relation.
 * Improved word features, including comparative, superlative tagging, etc.
   IMPORTANT: This *requires* link-grammar-4.6.5 or newer!
 * Fix crash on opencog output module, on comparative sentences.
 * Fix: string substitution of "be" in frame rules (Fabricio)
 * Fix: correctly pass variable nodes to opencog (Fabricio)
 * Fix: printing of variables in the "simple view" (Fabricio)
 * Fix: misc pet-embodiment frame rule changes (Fabricio)
 * Move subscript-based feature tagging out of java code into algs file.
 * Remove usage of isPastTenseForm(), in favor of verb subscripts.
 * Fix: Fallback sentence splitter will use standard Java API.

New in version 1.2.0 (12 October 2009)
 * Fixes DocSpliter fallback to behave when it is misconfigured.
 * Fixes for anaphora resolution; head-word was missing or mis-identified.
 * Fix crash when the distributed parser (remote parser) returns null.