@@ -4,6 +4,7 @@ New in version 1.3.1 (xxx 2010)
  * Add .n-f and .n-m linkgrammar gender tag recognition
  * Fix: anaphora resolution failure due to bad head-word identification.
  * Fix: missing frame concept error.
+ * Fix: Add /usr/lib/jni to the library search path.
 
 New in version 1.3.0 (15 May 2010)
  * New date relationships for date tagging.
